--- a/tutorials/tutorial_5/css/style.css
+++ b/tutorials/tutorial_5/css/style.css
@@ -11,3 +11,12 @@ body {
   margin: 10px auto;
   width: 400px;
 }
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 5px 10px;
+  text-align: left;
+}
